fix sidebar on mobile view and hide toggle string when not enough space
fixed add/remove class"closed" just for left menu. So the login sidebar isn't affected.

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -97,6 +97,7 @@
       color: var(--atum-text-light);
       height: 3.2rem;
       line-height: 3.2rem;
+      overflow: hidden;
       &:hover {
         text-decoration: none;
       }
